Убраны удобные методы из 21 джавы, заменены на универсальные аналоги